applications/general/mapCitizenDatabase/compile.txt
g++ -Wall -g -v -I/sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/../../utils/ -I/sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/../../library/binarytree/    -c -o /sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/src/main.o /sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/src/main.cpp
Using built-in specs.
COLLECT_GCC=g++
Target: x86_64-redhat-linux
Configured with: ../configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info --with-bugurl=http://bugzilla.redhat.com/bugzilla --enable-bootstrap --enable-shared --enable-threads=posix --enable-checking=release --with-system-zlib --enable-__cxa_atexit --disable-libunwind-exceptions --enable-gnu-unique-object --enable-linker-build-id --with-linker-hash-style=gnu --enable-languages=c,c++,objc,obj-c++,java,fortran,ada,go,lto --enable-plugin --enable-initfini-array --disable-libgcj --with-isl=/builddir/build/BUILD/gcc-4.8.5-20150702/obj-x86_64-redhat-linux/isl-install --with-cloog=/builddir/build/BUILD/gcc-4.8.5-20150702/obj-x86_64-redhat-linux/cloog-install --enable-gnu-indirect-function --with-tune=generic --with-arch_32=x86-64 --build=x86_64-redhat-linux
Thread model: posix
gcc version 4.8.5 20150623 (Red Hat 4.8.5-16) (GCC) 
COLLECT_GCC_OPTIONS='-Wall' '-g' '-v' '-I' '/sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/../../utils/' '-I' '/sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/../../library/binarytree/' '-c' '-o' '/sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/src/main.o' '-shared-libgcc' '-mtune=generic' '-march=x86-64'
 /usr/libexec/gcc/x86_64-redhat-linux/4.8.5/cc1plus -quiet -v -I /sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/../../utils/ -I /sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/../../library/binarytree/ -D_GNU_SOURCE /sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/src/main.cpp -quiet -dumpbase main.cpp -mtune=generic -march=x86-64 -auxbase-strip /sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/src/main.o -g -Wall -version -o /tmp/ccoBjI76.s
GNU C++ (GCC) version 4.8.5 20150623 (Red Hat 4.8.5-16) (x86_64-redhat-linux)
	compiled by GNU C version 4.8.5 20150623 (Red Hat 4.8.5-16), GMP version 6.0.0, MPFR version 3.1.1, MPC version 1.0.1
GGC heuristics: --param ggc-min-expand=100 --param ggc-min-heapsize=131072
ignoring nonexistent directory "/usr/lib/gcc/x86_64-redhat-linux/4.8.5/include-fixed"
ignoring nonexistent directory "/usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../x86_64-redhat-linux/include"
#include "..." search starts here:
#include <...> search starts here:
 /sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/../../utils/
 /sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/../../library/binarytree/
 /usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../include/c++/4.8.5
 /usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../include/c++/4.8.5/x86_64-redhat-linux
 /usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../include/c++/4.8.5/backward
 /usr/lib/gcc/x86_64-redhat-linux/4.8.5/include
 /usr/local/include
 /usr/include
End of search list.
GNU C++ (GCC) version 4.8.5 20150623 (Red Hat 4.8.5-16) (x86_64-redhat-linux)
	compiled by GNU C version 4.8.5 20150623 (Red Hat 4.8.5-16), GMP version 6.0.0, MPFR version 3.1.1, MPC version 1.0.1
GGC heuristics: --param ggc-min-expand=100 --param ggc-min-heapsize=131072
Compiler executable checksum: 7584c3ac2ab5d4c3d0f2b89a942408ea
In file included from /usr/include/c++/4.8.2/string:48:0,
                 from /usr/include/c++/4.8.2/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8.2/bits/ios_base.h:41,
                 from /usr/include/c++/4.8.2/ios:42,
                 from /usr/include/c++/4.8.2/ostream:38,
                 from /usr/include/c++/4.8.2/iostream:39,
                 from /sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/src/main.cpp:3:
/usr/include/c++/4.8.2/bits/stl_function.h: In instantiation of ‘bool std::less<_Tp>::operator()(const _Tp&, const _Tp&) const [with _Tp = Citizen]’:
/usr/include/c++/4.8.2/bits/stl_tree.h:1324:11:   required from ‘std::pair<std::_Rb_tree_node_base*, std::_Rb_tree_node_base*> std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_get_insert_unique_pos(const key_type&) [with _Key = Citizen; _Val = std::pair<const Citizen, std::basic_string<char> >; _KeyOfValue = std::_Select1st<std::pair<const Citizen, std::basic_string<char> > >; _Compare = std::less<Citizen>; _Alloc = std::allocator<std::pair<const Citizen, std::basic_string<char> > >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::key_type = Citizen]’
/usr/include/c++/4.8.2/bits/stl_tree.h:1377:47:   required from ‘std::pair<std::_Rb_tree_iterator<_Val>, bool> std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_insert_unique(const _Val&) [with _Key = Citizen; _Val = std::pair<const Citizen, std::basic_string<char> >; _KeyOfValue = std::_Select1st<std::pair<const Citizen, std::basic_string<char> > >; _Compare = std::less<Citizen>; _Alloc = std::allocator<std::pair<const Citizen, std::basic_string<char> > >]’
/usr/include/c++/4.8.2/bits/stl_map.h:595:41:   required from ‘std::pair<typename std::_Rb_tree<_Key, std::pair<const _Key, _Tp>, std::_Select1st<std::pair<const _Key, _Tp> >, _Compare, typename _Alloc::rebind<std::pair<const _Key, _Tp> >::other>::iterator, bool> std::map<_Key, _Tp, _Compare, _Alloc>::insert(const value_type&) [with _Key = Citizen; _Tp = std::basic_string<char>; _Compare = std::less<Citizen>; _Alloc = std::allocator<std::pair<const Citizen, std::basic_string<char> > >; typename std::_Rb_tree<_Key, std::pair<const _Key, _Tp>, std::_Select1st<std::pair<const _Key, _Tp> >, _Compare, typename _Alloc::rebind<std::pair<const _Key, _Tp> >::other>::iterator = std::_Rb_tree_iterator<std::pair<const Citizen, std::basic_string<char> > >; std::map<_Key, _Tp, _Compare, _Alloc>::value_type = std::pair<const Citizen, std::basic_string<char> >]’
/sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/src/main.cpp:19:112:   required from here
/usr/include/c++/4.8.2/bits/stl_function.h:235:20: error: passing ‘const Citizen’ as ‘this’ argument of ‘bool Citizen::operator<(const Citizen&)’ discards qualifiers [-fpermissive]
       { return __x < __y; }
                    ^
In file included from /sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/src/main.cpp:7:0:
/sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/src/Citizen.hpp: In member function ‘bool Citizen::operator<(const Citizen&)’:
/sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/src/Citizen.hpp:73:9: warning: control reaches end of non-void function [-Wreturn-type]
         }
         ^
make: *** [/sw-dump/dsubramanian/workspace/wrkspc0_progs/cpp-stl/applications/mapCitizenDatabase/src/main.o] Error 1
